--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "be2c178c",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "748a3941",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
        "4  M1230701703             0.0             0.0        0               0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "b2365e01",
    "metadata": {},
    "outputs": [
@@ -183,7 +183,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "301621da",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "35c1a145",
    "metadata": {},
    "outputs": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "3436e127",
    "metadata": {},
    "outputs": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "4d3e855e",
    "metadata": {},
    "outputs": [],
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "153fd092",
    "metadata": {},
    "outputs": [
@@ -321,7 +321,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "eab6d804",
    "metadata": {},
    "outputs": [],
@@ -354,12 +354,13 @@
     "x_test = x_test.drop(columns=['type'])\n",
     "\n",
     "x_train = pd.concat([x_train, type_train_df], axis=1)\n",
-    "x_test = pd.concat([x_test, type_test_df], axis=1)\n"
+    "x_test = pd.concat([x_test, type_test_df], axis=1)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "b3ecb999",
    "metadata": {},
    "outputs": [
@@ -612,7 +613,7 @@
        "[4453834 rows x 12 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "bf0f08f0",
    "metadata": {},
    "outputs": [],
@@ -636,6 +637,57 @@
     "\n",
     "x_train_resampled, y_train_resampled = smote.fit_resample(x_train, y_train)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "db5bde1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df['BalanceOrigin'] = df['newbalanceOrig'] - df['oldbalanceOrg']\n",
+    "df['BalanceDest'] = df['newbalanceDest'] - df['oldbalanceDest']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c57a6b0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "epilson = 1e-9\n",
+    "df['AmountToBalanceRatio'] = df['amount'] / (df['oldbalanceOrg'] + epilson)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e1f88414",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['DayOfWeek'] = (df['step'] // 24) % 7 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "24db1a6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['hourOfDay'] = df['step'] % 24"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99a32d3d",
+   "metadata": {},
+   "source": [
+    "Phase 2 - Models"
    ]
   }
  ],
