Adding the LightGBM model

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -300,7 +300,11 @@
     "x = df[['step', 'type', 'amount', 'oldbalanceOrg', 'newbalanceOrig', 'oldbalanceDest', 'newbalanceDest', 'isFlaggedFraud']]\n",
     "y = df[\"isFraud\"]\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=0.3, random_state=42, stratify=y)\n"
+    "x_train, x_test, y_train, y_test = train_test_split(x,y, test_size=0.3, random_state=42, stratify=y)\n",
+    "\n",
+    "columns_to_drop = ['oldbalanceOrg', 'newbalanceOrig', 'oldbalanceDest', 'newbalanceDest']\n",
+    "x_train = x_train.drop(columns=columns_to_drop)\n",
+    "x_test = x_test.drop(columns=columns_to_drop)\n"
    ]
   },
   {
@@ -387,10 +391,6 @@
        "      <th></th>\n",
        "      <th>step</th>\n",
        "      <th>amount</th>\n",
-       "      <th>oldbalanceOrg</th>\n",
-       "      <th>newbalanceOrig</th>\n",
-       "      <th>oldbalanceDest</th>\n",
-       "      <th>newbalanceDest</th>\n",
        "      <th>isFlaggedFraud</th>\n",
        "      <th>type_CASH_IN</th>\n",
        "      <th>type_CASH_OUT</th>\n",
@@ -404,10 +404,6 @@
        "      <th>4310249</th>\n",
        "      <td>308</td>\n",
        "      <td>260485.23</td>\n",
-       "      <td>32371.00</td>\n",
-       "      <td>292856.23</td>\n",
-       "      <td>4633560.35</td>\n",
-       "      <td>4373075.12</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -419,10 +415,6 @@
        "      <th>318938</th>\n",
        "      <td>16</td>\n",
        "      <td>1387060.19</td>\n",
-       "      <td>432673.78</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1033440.62</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -434,10 +426,6 @@
        "      <th>3375139</th>\n",
        "      <td>254</td>\n",
        "      <td>1140661.98</td>\n",
-       "      <td>59947.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>15000.85</td>\n",
-       "      <td>1155662.83</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -449,10 +437,6 @@
        "      <th>5492781</th>\n",
        "      <td>380</td>\n",
        "      <td>169390.39</td>\n",
-       "      <td>80047.10</td>\n",
-       "      <td>249437.49</td>\n",
-       "      <td>1467039.66</td>\n",
-       "      <td>1297649.27</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -464,10 +448,6 @@
        "      <th>807263</th>\n",
        "      <td>40</td>\n",
        "      <td>4867.26</td>\n",
-       "      <td>5989226.14</td>\n",
-       "      <td>5994093.40</td>\n",
-       "      <td>1609385.28</td>\n",
-       "      <td>1604518.02</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
@@ -485,19 +465,11 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1422253</th>\n",
        "      <td>139</td>\n",
        "      <td>175520.68</td>\n",
-       "      <td>977.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>91159.52</td>\n",
-       "      <td>266680.20</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -509,10 +481,6 @@
        "      <th>5834821</th>\n",
        "      <td>402</td>\n",
        "      <td>347110.99</td>\n",
-       "      <td>103785.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>87871.75</td>\n",
-       "      <td>434982.74</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
@@ -524,10 +492,6 @@
        "      <th>4182953</th>\n",
        "      <td>304</td>\n",
        "      <td>13259.63</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -539,10 +503,6 @@
        "      <th>3985280</th>\n",
        "      <td>298</td>\n",
        "      <td>24122.92</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -554,10 +514,6 @@
        "      <th>1541412</th>\n",
        "      <td>154</td>\n",
        "      <td>6865.63</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -567,35 +523,22 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4453834 rows × 12 columns</p>\n",
+       "<p>4453834 rows × 8 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         step      amount  oldbalanceOrg  newbalanceOrig  oldbalanceDest  \\\n",
-       "4310249   308   260485.23       32371.00       292856.23      4633560.35   \n",
-       "318938     16  1387060.19      432673.78            0.00            0.00   \n",
-       "3375139   254  1140661.98       59947.00            0.00        15000.85   \n",
-       "5492781   380   169390.39       80047.10       249437.49      1467039.66   \n",
-       "807263     40     4867.26     5989226.14      5994093.40      1609385.28   \n",
-       "...       ...         ...            ...             ...             ...   \n",
-       "1422253   139   175520.68         977.00            0.00        91159.52   \n",
-       "5834821   402   347110.99      103785.00            0.00        87871.75   \n",
-       "4182953   304    13259.63           0.00            0.00            0.00   \n",
-       "3985280   298    24122.92           0.00            0.00            0.00   \n",
-       "1541412   154     6865.63           0.00            0.00            0.00   \n",
-       "\n",
-       "         newbalanceDest  isFlaggedFraud  type_CASH_IN  type_CASH_OUT  \\\n",
-       "4310249      4373075.12               0           1.0            0.0   \n",
-       "318938       1033440.62               0           0.0            0.0   \n",
-       "3375139      1155662.83               0           0.0            0.0   \n",
-       "5492781      1297649.27               0           1.0            0.0   \n",
-       "807263       1604518.02               0           1.0            0.0   \n",
-       "...                 ...             ...           ...            ...   \n",
-       "1422253       266680.20               0           0.0            0.0   \n",
-       "5834821       434982.74               0           0.0            1.0   \n",
-       "4182953            0.00               0           0.0            0.0   \n",
-       "3985280            0.00               0           0.0            0.0   \n",
-       "1541412            0.00               0           0.0            0.0   \n",
+       "         step      amount  isFlaggedFraud  type_CASH_IN  type_CASH_OUT  \\\n",
+       "4310249   308   260485.23               0           1.0            0.0   \n",
+       "318938     16  1387060.19               0           0.0            0.0   \n",
+       "3375139   254  1140661.98               0           0.0            0.0   \n",
+       "5492781   380   169390.39               0           1.0            0.0   \n",
+       "807263     40     4867.26               0           1.0            0.0   \n",
+       "...       ...         ...             ...           ...            ...   \n",
+       "1422253   139   175520.68               0           0.0            0.0   \n",
+       "5834821   402   347110.99               0           0.0            1.0   \n",
+       "4182953   304    13259.63               0           0.0            0.0   \n",
+       "3985280   298    24122.92               0           0.0            0.0   \n",
+       "1541412   154     6865.63               0           0.0            0.0   \n",
        "\n",
        "         type_DEBIT  type_PAYMENT  type_TRANSFER  \n",
        "4310249         0.0           0.0            0.0  \n",
@@ -610,7 +553,7 @@
        "3985280         0.0           1.0            0.0  \n",
        "1541412         0.0           1.0            0.0  \n",
        "\n",
-       "[4453834 rows x 12 columns]"
+       "[4453834 rows x 8 columns]"
       ]
      },
      "execution_count": 10,
@@ -642,29 +585,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "db5bde1d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "df['BalanceOrigin'] = df['newbalanceOrig'] - df['oldbalanceOrg']\n",
-    "df['BalanceDest'] = df['newbalanceDest'] - df['oldbalanceDest']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "c57a6b0e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "epilson = 1e-9\n",
-    "df['AmountToBalanceRatio'] = df['amount'] / (df['oldbalanceOrg'] + epilson)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "id": "e1f88414",
    "metadata": {},
    "outputs": [],
@@ -674,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "24db1a6f",
    "metadata": {},
    "outputs": [],
@@ -689,11 +609,231 @@
    "source": [
     "Phase 2 - Models"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "4d5adde3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\nfrom sklearn.ensemble import RandomForestClassifier\\nfrom sklearn.metrics import accuracy_score, classification_report\\nfrom sklearn.model_selection import RandomizedSearchCV\\n\\n\\nparameters_grid = {\\n    \\'n_estimators\\':[100,50,20],\\n    \\'max_depth\\':[None,20,10],\\n    \\'bootstrap\\':[True, False],\\n    \\'min_samples_leaf\\':[1 ,2]\\n}\\n\\nrandom_search = RandomizedSearchCV(\\n    RandomForestClassifier(), \\n    param_distributions=parameters_grid,\\n    n_iter=10,  \\n    cv=3,\\n    verbose=2,\\n    random_state=42,\\n    n_jobs=-1\\n)\\nrandom_search.fit(x_train_resampled, y_train_resampled)\\n\\nprint(\"Best Parameters:\", random_search.best_params_)\\nprint(\"Best Estimator:\", random_search.best_estimator_)\\n\\n\\nmodel_rf = RandomForestClassifier(n_estimators=20, random_state=42, max_depth=20, n_jobs=-1)\\nmodel_rf.fit(x_train_resampled, y_train_resampled)\\n\\ny_pred = model_rf.predict(x_test)\\n\\nacc = accuracy_score(y_test, y_pred)\\nclassifiy_report = classification_report(y_test, y_pred)\\n\\nprint(acc)\\nprint(classifiy_report)\\n\\n'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "\n",
+    "\n",
+    "parameters_grid = {\n",
+    "    'n_estimators':[100,50,20],\n",
+    "    'max_depth':[None,20,10],\n",
+    "    'bootstrap':[True, False],\n",
+    "    'min_samples_leaf':[1 ,2]\n",
+    "}\n",
+    "\n",
+    "random_search = RandomizedSearchCV(\n",
+    "    RandomForestClassifier(), \n",
+    "    param_distributions=parameters_grid,\n",
+    "    n_iter=10,  \n",
+    "    cv=3,\n",
+    "    verbose=2,\n",
+    "    random_state=42,\n",
+    "    n_jobs=-1\n",
+    ")\n",
+    "random_search.fit(x_train_resampled, y_train_resampled)\n",
+    "\n",
+    "print(\"Best Parameters:\", random_search.best_params_)\n",
+    "print(\"Best Estimator:\", random_search.best_estimator_)\n",
+    "\n",
+    "\n",
+    "model_rf = RandomForestClassifier(n_estimators=20, random_state=42, max_depth=20, n_jobs=-1)\n",
+    "model_rf.fit(x_train_resampled, y_train_resampled)\n",
+    "\n",
+    "y_pred = model_rf.predict(x_test)\n",
+    "\n",
+    "acc = accuracy_score(y_test, y_pred)\n",
+    "classifiy_report = classification_report(y_test, y_pred)\n",
+    "\n",
+    "print(acc)\n",
+    "print(classifiy_report)\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b04a32c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nfrom sklearn.model_selection import RandomizedSearchCV\\nimport xgboost as xgb\\nimport numpy as np\\n\\n# Convert your training data to float32 if not already\\nx_train_resampled = x_train_resampled.astype(np.float32)\\n\\nparams = {\\n    \\'n_estimators\\': [20, 50, 100],\\n    \\'max_depth\\': [3, 4, 6, 7],\\n    \\'learning_rate\\': [0.01, 0.05, 0.07, 0.1, 0.2],\\n    \\'subsample\\': [0.6, 0.8, 1.0],            # Use a fraction of data per tree\\n    \\'colsample_bytree\\': [0.6, 0.8, 1.0]      # Use a fraction of features per tree\\n}\\n\\nxgb_clf = xgb.XGBClassifier(\\n    objective=\\'binary:logistic\\',\\n    tree_method=\\'gpu_hist\\',  # Use GPU acceleration\\n    gpu_id=0\\n)\\n\\nrandom_search = RandomizedSearchCV(\\n    estimator=xgb_clf,\\n    param_distributions=params,\\n    n_iter=10,\\n    scoring=\\'f1\\',\\n    cv=3,\\n    verbose=2,\\n    n_jobs=-1,\\n    random_state=42\\n)\\n\\nrandom_search.fit(x_train_resampled, y_train_resampled)\\n\\nprint(\"Best parameters found: \", random_search.best_params_)\\n'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "from sklearn.model_selection import RandomizedSearchCV\n",
+    "import xgboost as xgb\n",
+    "import numpy as np\n",
+    "\n",
+    "# Convert your training data to float32 if not already\n",
+    "x_train_resampled = x_train_resampled.astype(np.float32)\n",
+    "\n",
+    "params = {\n",
+    "    'n_estimators': [20, 50, 100],\n",
+    "    'max_depth': [3, 4, 6, 7],\n",
+    "    'learning_rate': [0.01, 0.05, 0.07, 0.1, 0.2],\n",
+    "    'subsample': [0.6, 0.8, 1.0],            # Use a fraction of data per tree\n",
+    "    'colsample_bytree': [0.6, 0.8, 1.0]      # Use a fraction of features per tree\n",
+    "}\n",
+    "\n",
+    "xgb_clf = xgb.XGBClassifier(\n",
+    "    objective='binary:logistic',\n",
+    "    tree_method='gpu_hist',  # Use GPU acceleration\n",
+    "    gpu_id=0\n",
+    ")\n",
+    "\n",
+    "random_search = RandomizedSearchCV(\n",
+    "    estimator=xgb_clf,\n",
+    "    param_distributions=params,\n",
+    "    n_iter=10,\n",
+    "    scoring='f1',\n",
+    "    cv=3,\n",
+    "    verbose=2,\n",
+    "    n_jobs=-1,\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "random_search.fit(x_train_resampled, y_train_resampled)\n",
+    "\n",
+    "print(\"Best parameters found: \", random_search.best_params_)\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3bb4927",
+   "metadata": {},
+   "source": [
+    "LIGHTGBM Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8106a704",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1929848d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training until validation scores don't improve for 50 rounds\n",
+      "[100]\tvalid_0's binary_logloss: 0.150761\n",
+      "[200]\tvalid_0's binary_logloss: 0.135855\n",
+      "[300]\tvalid_0's binary_logloss: 0.130629\n",
+      "[400]\tvalid_0's binary_logloss: 0.127441\n",
+      "[500]\tvalid_0's binary_logloss: 0.125089\n",
+      "[600]\tvalid_0's binary_logloss: 0.123577\n",
+      "[700]\tvalid_0's binary_logloss: 0.122289\n",
+      "[800]\tvalid_0's binary_logloss: 0.121236\n",
+      "[900]\tvalid_0's binary_logloss: 0.120385\n",
+      "[1000]\tvalid_0's binary_logloss: 0.119675\n",
+      "Did not meet early stopping. Best iteration is:\n",
+      "[1000]\tvalid_0's binary_logloss: 0.119675\n",
+      "[6.86322983e-07 2.23134541e-06 1.60954424e-06 ... 7.87078492e-02\n",
+      " 5.46166721e-01 4.60088125e-01]\n",
+      "Accuracy: 0.9555\n",
+      "F1 Score: 0.0442\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      0.96      0.98   1906322\n",
+      "           1       0.02      0.80      0.04      2464\n",
+      "\n",
+      "    accuracy                           0.96   1908786\n",
+      "   macro avg       0.51      0.88      0.51   1908786\n",
+      "weighted avg       1.00      0.96      0.98   1908786\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import lightgbm as lgb\n",
+    "from sklearn.metrics import accuracy_score, f1_score, classification_report\n",
+    "\n",
+    "params = {\n",
+    "    'objective':'binary',\n",
+    "    'boosting_type':'gbdt',\n",
+    "    'learning_rate':0.05,\n",
+    "    'max_depth':-1,\n",
+    "    'num_leaves':31,\n",
+    "    'subsample':0.8,\n",
+    "    'colsample_bytree':0.8,\n",
+    "    'reg_alpha':0.1,\n",
+    "    'reg_lambda':0.1,\n",
+    "    'device':'cpu',\n",
+    "    'verbose':-1\n",
+    "}\n",
+    "\n",
+    "train_data = lgb.Dataset(x_train_resampled, label=y_train_resampled)\n",
+    "valid_data = lgb.Dataset(x_test, label=y_test, reference=train_data)\n",
+    "callbacks = [lgb.early_stopping(stopping_rounds=50), lgb.log_evaluation(period=100)]\n",
+    "\n",
+    "LGB_model = lgb.train(\n",
+    "    params,\n",
+    "    train_data,\n",
+    "    valid_sets=[valid_data],\n",
+    "    num_boost_round=1000,\n",
+    "    callbacks=callbacks,\n",
+    "    \n",
+    ")\n",
+    "\n",
+    "y_pred = LGB_model.predict(x_test)\n",
+    "print(y_pred)\n",
+    "\n",
+    "y_pred = (y_pred >= 0.5).astype(int)\n",
+    "\n",
+    "# Calculate accuracy and F1 score\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "f1 = f1_score(y_test, y_pred)\n",
+    "\n",
+    "print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "print(f\"F1 Score: {f1:.4f}\")\n",
+    "print(\"Classification Report:\")\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env (3.10.12)",
+   "display_name": ".venv (3.10.12)",
    "language": "python",
    "name": "python3"
   },
